--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.525
+version 0.526
 
 =head1 SYNOPSIS
 
@@ -93,6 +93,21 @@ the format sub is a coderef that takes one argument and returns a boolean result
 be specified in the form of C<< { $format_name => { type => $type, sub => $format_sub } } >>,
 where the type indicates which of the core JSON Schema types (null, object, array, boolean, string,
 number, or integer) the instance value must be for the format validation to be considered.
+
+=head2 validate_content_schemas
+
+When true, the C<contentMediaType> and C<contentSchema> keywords are not treated as pure annotations:
+C<contentEncoding> (when present) is used to decode the applied data payload and then
+C<contentMediaType> will be used as the media-type for decoding to produce the data payload which is
+then applied to the schema in C<contentSchema> for validation.
+
+See L</add_media_type> and L</add_encoding> for adding additional type support.
+
+=for stopwords shhh
+
+Technically only draft7 allows this and drafts 2019-09 and 2020-12 prohibit ever returning the
+subschema evaluation results together with their parent schema's, so shhh. I'm trying to get this
+fixed for the next draft.
 
 =head2 collect_annotations
 
@@ -181,7 +196,7 @@ or a URI string indicating the location where such a schema is located.
 
 Optionally, a hashref can be passed as a third parameter which allows changing the values of the
 L</short_circuit>, L</collect_annotations>, L</annotate_unknown_keywords>, L</scalarref_booleans> and/or
-L</validate_formats> settings for just this
+L</validate_formats>, L<validate_content_schemas> settings for just this
 evaluation call.
 
 You can pass a series of callback subs to this method corresponding to keywords, which is useful for
@@ -257,6 +272,79 @@ L<"Meta-Schemas and Vocabularies"|https://json-schema.org/draft/2020-12/json-sch
 The class must compose the L<JSON::Schema::Modern::Vocabulary> role and implement the
 L<vocabulary|JSON::Schema::Modern::Vocabulary/vocabulary> and
 L<keywords|JSON::Schema::Modern::Vocabulary/keywords> methods.
+
+=head2 add_media_type
+
+  $js->add_media_type('application/furble' => sub ($content_ref) {
+    return ...;  # data representing the deserialized text for Content-Type: application/furble
+  });
+
+=for stopwords subref
+
+Takes a media-type name and a subref which takes a single scalar reference, which is expected to be
+a reference to a string, which might contain wide characters (i.e. not octets), especially when used
+in conjunction with L</get_encoding> below. Must return B<a reference to a value of any type> (which is
+then dereferenced for the C<contentSchema> keyword).
+
+These media types are already known:
+
+=over 4
+
+=item *
+
+C<application/json>
+
+=item *
+
+C<text/plain>
+
+=back
+
+=head2 get_media_type
+
+Fetches a decoder sub for the indicated media type.
+
+=for stopwords thusly
+
+You can use it thusly:
+
+  my $decoder = $self->get_media_type('application/furble') or die 'cannot find media type decoder';
+  my $content_ref = $decoder->(\$content_string);
+
+=head2 add_encoding
+
+  $js->add_media_type('application/furble' => sub ($content_ref) {
+    return \ ...;  # data representing the deserialized content for Content-Type: application/furble
+  });
+
+Takes an encoding name and a subref which takes a single scalar reference, which is expected to be
+a reference to a string, which SHOULD be a 7-bit or 8-bit string. Result values MUST be a scalar-reference
+to a string.
+
+=for stopwords natively
+
+Encodings handled natively are:
+
+=over 4
+
+=item *
+
+C<base64>
+
+=back
+
+See also L<HTTP::Message/encode>.
+
+=head2 get_encoding
+
+Fetches a decoder sub for the indicated encoding. Incoming values MUST be a reference to an octet
+string. Result values will be a scalar-reference to a string, which might be passed to a media_type
+decoder (see above).
+
+You can use it thusly:
+
+  my $decoder = $self->get_encoding('base64') or die 'cannot find encoding decoder';
+  my $content_ref = $decoder->(\$content_string);
 
 =head2 get
 
