--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.528     2021-11-30 06:17:29Z
           - evaluation callback sub signature has changed, to add $data
           - minor performance improvement during evaluation
