--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.529     2021-12-03 04:00:26Z
           - added FREEZE and THAW callbacks to assist with serialization
 
