--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.530     2021-12-03 16:44:23Z
           - fix hash slice syntax that is not available before perl 5.28
 
