--- a/README.pod
+++ b/README.pod
@@ -10,7 +10,7 @@ JSON::Schema::Modern - Validate data against a schema
 
 =head1 VERSION
 
-version 0.530
+version 0.531
 
 =head1 SYNOPSIS
 
@@ -86,10 +86,12 @@ to false.
 
 =head2 format_validations
 
+=for stopwords subref
+
 An optional hashref that allows overriding the validation method for formats, or adding new ones.
 Overrides to existing formats (see L</Format Validation>)
 must be specified in the form of C<< { $format_name => $format_sub } >>, where
-the format sub is a coderef that takes one argument and returns a boolean result. New formats must
+the format sub is a subref that takes one argument and returns a boolean result. New formats must
 be specified in the form of C<< { $format_name => { type => $type, sub => $format_sub } } >>,
 where the type indicates which of the core JSON Schema types (null, object, array, boolean, string,
 number, or integer) the instance value must be for the format validation to be considered.
@@ -262,6 +264,16 @@ Returns C<undef> if the resource could not be found;
 if there were errors in the document, will die with these errors;
 otherwise returns the L<JSON::Schema::Modern::Document> that contains the added schema.
 
+=head2 add_format_validation
+
+=for comment we are the nine Eleven Deniers
+
+  $js->add_format_validation(no_nines => { type => 'number', sub => sub ($value) { $value =~ m/^[0-8]$$/ });
+
+Adds support for a custom format. The data type that this format applies to must be supplied; all
+values of any other type will automatically be deemed to be valid, and will not be passed to the
+subref.
+
 =head2 add_vocabulary
 
   $js->add_vocabulary('My::Custom::Vocabulary::Class');
@@ -279,8 +291,6 @@ L<keywords|JSON::Schema::Modern::Vocabulary/keywords> methods.
   $js->add_media_type('application/furble' => sub ($content_ref) {
     return ...;  # data representing the deserialized text for Content-Type: application/furble
   });
-
-=for stopwords subref
 
 Takes a media-type name and a subref which takes a single scalar reference, which is expected to be
 a reference to a string, which might contain wide characters (i.e. not octets), especially when used
@@ -303,7 +313,7 @@ C<text/plain>
 
 =head2 get_media_type
 
-Fetches a decoder sub for the indicated media type.
+Fetches a decoder sub for the indicated media type. Lookups are performed B<without case sensitivity>.
 
 =for stopwords thusly
 
