--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for JSON-Schema-Modern
 {{$NEXT}}
           - add media_type decoders for application/schema+json,
             application/schema-instance+json
+          - add 'json-schema-eval' executable, for ad-hoc evaluation
 
 0.531     2021-12-06 05:39:53Z
           - add method to add format implementations after construction
