--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - clarify exit statuses for 'json-schema-eval'
 
 0.533     2021-12-23 19:45:11Z
           - fix exit statuses in json-schema-eval
