--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.534     2021-12-27 21:05:34Z
           - clarify exit statuses for 'json-schema-eval'
           - fix numeric tests for architectures with small int size
