--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for JSON-Schema-Modern
 
+{{$NEXT}}
+
 0.535     2021-12-28 06:38:37Z
           - mark more tests TODO (temporarily!) for small-int systems
 
