use Math::Big* for division if either argument is a non-integer
e.g. see http://www.cpantesters.org/cpan/report/565b8764-6965-11ec-bc66-57723b537541

--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
           - fix number/integer differentiation on small-int systems
+          - improve division calculations if either argument is a non-integer
 
 0.536     2021-12-30 05:32:44Z
           - very large/small numbers are now properly accomodated in all
