--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for JSON-Schema-Modern
 
 {{$NEXT}}
+          - add --add-schema option to json-schema-eval to allow for the
+            reference of additional schemas during evaluation
 
 0.540     2022-01-17 18:58:36Z
           - make "unimplemented format" errors more visible
